--- a/myMuseum/src/main/resources/templates/opereAll.html
+++ b/myMuseum/src/main/resources/templates/opereAll.html
@@ -4,7 +4,7 @@
     <head th:replace="fragments/base.html :: headerfiles"> </head> 
     
 <body>
-    <div class="topnav">
+  <div class="topnav">
       <a href="/home">Home</a>
       <a href="/collezioni">Collezioni</a>
       <a class="active" href="/opere">Opere</a>
@@ -13,6 +13,27 @@
     </div>
 	<header th:replace="fragments/base.html :: intestazione"></header>
     
-    <footer th:replace="fragments/base.html :: fondo"></footer>
+  <section>
+    <div>
+      <h4>Lista opere</h4>
+      <ul>
+        <li th:each="opera : ${opere}">
+          <a href="opera.html" 
+             th:href="@{'/opere' + '/' + ${opera.id}}" 
+             th:text="|${opera.titolo}, ${opera.anno}|">Giudizio Universale</a>
+        </li>
+      </ul>
+    </div>   
+
+
+
+
+
+  </section>
+
+
+
+
+  <footer th:replace="fragments/base.html :: fondo"></footer>
 </body>
 </html>
