--- a/myMuseum/src/main/resources/static/css/myStyle.css
+++ b/myMuseum/src/main/resources/static/css/myStyle.css
@@ -19,6 +19,11 @@
   color: white;
 }
 
+#admin a:hover {
+  background-color: #DAA520;
+  color: white;
+} 
+
 header {
     background: no-repeat left/cover url(/images/Creazione.jpg);
     display: flex;
