--- a/myMuseum/src/main/resources/templates/admin_home.html
+++ b/myMuseum/src/main/resources/templates/admin_home.html
@@ -31,8 +31,8 @@
             <li><a href="/admin/deleteCollezione" th:text="#{msgAdmin.EliminaCollezione}"></a></li>
             <li><a href="/admin/newArtista" th:text="#{msgAdmin.NewArtista}"></a></li>
             <li><a href="/admin/deleteArtista" th:text="#{msgAdmin.EliminaArtista}"></a></li>
-            <li><a href="#home" th:text="#{msgAdmin.NewOpera}"></a></li>
-            <li><a href="#news" th:text="#{msgAdmin.EliminaOpera}"></a></li>
+            <li><a href="/admin/newOpera" th:text="#{msgAdmin.NewOpera}"></a></li>
+            <li><a href="/admin/deleteOpera" th:text="#{msgAdmin.EliminaOpera}"></a></li>
             <li><a href="/admin/newCuratore" th:text="#{msgAdmin.NewCuratore}"></a></li>
             <li><a href="/admin/deleteCuratore" th:text="#{msgAdmin.EliminaCuratore}"></a></li>
             <li><a href="/admin/curatori" th:text="#{msgAdmin.VisualizzaCuratori}"></a></li>
