--- a/myMuseum/src/main/resources/templates/registerUser.html
+++ b/myMuseum/src/main/resources/templates/registerUser.html
@@ -21,7 +21,7 @@
         <h4 th:text="#{header.newAdmin}">Benvenuto!</h4>
 
         <div>
-        <form th:action="@{/admin/register}" method="POST">
+        <form th:action="@{/register}" method="POST">
         <table>
         <tr>
             <td>Username</td>
