--- a/myMuseum/src/main/resources/templates/fragments/base.html
+++ b/myMuseum/src/main/resources/templates/fragments/base.html
@@ -3,7 +3,7 @@
 <head th:fragment="headerfiles">
 	<meta charset="UTF-8" />
 	<link th:href="@{/css/myStyle.css}" rel="stylesheet">
-	<!--<title th:text="${title}"></title> -->
+	<title >MyMuseum</title> 
 </head>
 <body>
 
@@ -14,6 +14,8 @@
 	
 	
 	<footer th:fragment="fondo">
+		<h3 id="footer">MyMuseum</h3>
+		<p id="footer">Tel: 065512671, Email: myMuseum@email.com</p>
 	</footer>
 </body>
 </html>
