--- a/myMuseum/src/main/resources/static/css/myStyle.css
+++ b/myMuseum/src/main/resources/static/css/myStyle.css
@@ -1,3 +1,19 @@
+section{
+ margin:15px;
+ padding:15px;
+ background-color: #E8E3E2;
+ border:solid 2px #DAA520;border-radius: 10px;
+}
+footer {
+  height: 10em;
+  
+    border-top-style: outset;
+    margin-top: 9.5em;
+    background-color: #333;
+    color: white;
+    font-size: 90%;
+  }
+
 .topnav {
   overflow: hidden;
   background-color: #333;
@@ -10,9 +26,18 @@
   text-decoration: none;
   font-size: 17px;
 }
+.topnav a:visited {
+  float: left;
+  color: #f2f2f2;
+  text-align: center;
+  padding: 14px 16px;
+  text-decoration: none;
+  font-size: 17px;
+}
 .topnav a:hover {
   background-color: #ddd;
   color: black;
+  text-decoration: none;
 }
 .topnav a.active {
   background-color: #DAA520;
@@ -42,13 +67,17 @@ header > h1 {
 }
 
 
-footer {
-  height: 100px;
-    border-top-style: outset;
-    margin-top: 2em;
-    background-color: #333;
-  }
 
+
+#footer {
+  margin: 25px;
+}
+
+footer > h3{
+  font: bold calc(1em + 2 * (100vw - 120px) / 100) 'Dancing Script', cursive,
+        fantasy;
+  color: #DAA520;
+}
 
 .adminMenu ul {
   list-style-type: none;
@@ -71,4 +100,34 @@ footer {
 .adminMenu li a:hover {
   background-color: #DAA520;
   color: white;
+}
+
+
+
+
+img{
+  max-width: 600px;
+  max-height: 600px; 
+}
+
+.home img{
+  max-width: 400px;
+  max-height: 400px; 
+  border: 0;
+}
+
+.home a:hover{
+  border:solid 5px #DAA520;border-radius: 10px;     padding: 5px;
+}
+
+
+a {
+    text-decoration: none;
+}
+a:visited {
+    color: black;
+}
+a:hover {
+    color: red;
+    text-decoration: underline;
 }
