--- a/myMuseum/src/main/resources/templates/home.html
+++ b/myMuseum/src/main/resources/templates/home.html
@@ -5,14 +5,67 @@
     
 <body>
     <div class="topnav">
-      <a class="active" href="/home">Home</a>
-      <a href="/collezioni">Collezioni</a>
-      <a href="/opere">Opere</a>
-      <a href="/artisti">Artisti</a>
-      <a href="/admin/home">Area admin</a>
-    </div>
+    	<a  class="active" href="/home" th:text="#{header.home}">Home</a>
+    	<a href="/collezioni" th:text="#{header.collezioni}">Collezioni</a>
+    	<a href="/opere" th:text="#{header.opere}">Opere</a>
+    	<a href="/artisti" th:text="#{header.artisti}">Artisti</a>
+    	<a href="/admin/home" th:text="#{header.areaAdmin}">Area admin</a>
+ 	</div>
 	<header th:replace="fragments/base.html :: intestazione"></header>
     
+	<section>
+		<h4 th:text="#{header.benvenuto}">Benvenuto:</h4>
+      	<p th:utext="#{header.presentazione}">descrizione</p>
+		<h4 th:text="#{header.orarioTi}">Benvenuto:</h4>
+      	<p th:utext="#{header.orario}">descrizione</p>
+		<h4 th:text="#{header.comeArrivareTit}">Benvenuto:</h4>
+		<h5>Metro:</h5>
+      	<p th:utext="#{header.metro}">descrizione</p>
+      	<h5>Bus:</h5>
+      	<p th:utext="#{header.bus}">descrizione</p>
+      	<h5>Tram:</h5>
+      	<p th:utext="#{header.tram}">descrizione</p>
+      	<h5>Taxi:</h5>
+      	<p th:utext="#{header.taxi}">descrizione</p>
+<br>
+<br>
+
+      	<!-- immagini -->
+      	<div class="home">
+      		<h4 th:text="#{header.esplora}" style="font-style: italic;">Benvenuto:</h4>		
+			<div th:if="${opera1}" th:object="${opera1}">
+				<a href="opera.html" 
+	             th:href="@{'/opere' + '/' + ${opera1.id}}" >
+	             <img th:src="@{'data:image/jpeg;base64,' +${image1}}"></a>
+			</div>
+			<div th:unless="${opera1}"></div>
+			<br>
+			<div th:if="${opera2}" th:object="${opera2}">
+				<a href="opera.html" 
+	             th:href="@{'/opere' + '/' + ${opera2.id}}" > 
+	             <img th:src="@{'data:image/jpeg;base64,' +${image2}}"></a>
+			</div>
+			<div th:unless="${opera2}"></div>
+			<br>
+			<div th:if="${opera3}" th:object="${opera3}">
+				<a href="opera.html" 
+	             th:href="@{'/opere' + '/' + ${opera3.id}}" >
+	             <img th:src="@{'data:image/jpeg;base64,' +${image3}}"></a>
+			</div>
+			<div th:unless="${opera3}"></div>
+      	</div>
+		
+
+
+
+		
+
+
+		 
+
+	</section>
+
+
     <footer th:replace="fragments/base.html :: fondo"></footer>
 </body>
 </html>
