--- a/myMuseum/src/main/resources/templates/registerUserPROVA.html
+++ b/myMuseum/src/main/resources/templates/registerUserPROVA.html
@@ -1,12 +1,28 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org">
-<head th:replace="fragments/base.html :: headerfiles(title='Registra Utente')"> </head>
+    <!--<head th:replace="fragments/base.html :: headerfiles(title=#{pageTitle.persona})"> </head> -->
+    <head th:replace="fragments/base.html :: headerfiles"> 
+
+    </head> 
+    
 <body>
-	<header th:replace="fragments/base.html :: intestazione"></header>
-	<div>
-    	<h4 th:text="#{header.registra}">Registrazione</h4>
-	<form th:action="@{/register}" method="POST">
-    <table>
+  <div class="topnav">
+    <a href="/home" th:text="#{header.home}">Home</a>
+    <a href="/collezioni" th:text="#{header.collezioni}">Collezioni</a>
+    <a href="/opere" th:text="#{header.opere}">Opere</a>
+    <a href="/artisti" th:text="#{header.artisti}">Artisti</a>
+    <a class="active" href="/admin/home" th:text="#{header.areaAdmin}">Area admin</a>
+  </div>
+  <header th:replace="fragments/base.html :: intestazione"></header>
+
+
+  <section>
+    <div>
+        <h4 th:text="#{header.newAdmin}">Benvenuto!</h4>
+
+        <div>
+        <form th:action="@{/register}" method="POST">
+        <table>
         <tr>
             <td>Username</td>
             <td><input type="text" placeholder="username" required
@@ -22,14 +38,14 @@
                 th:errors="${credentials.password}" th:style="'color:red'"></td>
         </tr>
         <tr>
-            <td>Nome</td>
+            <td th="#{msgArtista.nome}">Nome</td>
             <td><input type="text" placeholder="nome" required
                        th:field="${user.nome}"/></td>
             <td th:if="${#fields.hasErrors('user.nome')}"
                 th:errors="${user.nome}" th:style="'color:red'"></td>
         </tr>
         <tr>
-            <td>Cognome</td>
+            <td th="#{msgArtista.cognome}">Cognome</td>
             <td><input type="text" placeholder="cognome" required
                        th:field="${user.cognome}"/></td>
             <td th:if="${#fields.hasErrors('user.cognome')}"
@@ -41,8 +57,16 @@
             </td>
         </tr>
     </table>
-	</form>
-	</div>
-    <footer th:replace="fragments/base.html :: fondo(home='/')"></footer>
+    </form>
+        </div> 
+    </div>
+    
+
+</section>
+
+
+
+
+  <footer th:replace="fragments/base.html :: fondo"></footer>
 </body>
 </html>
