--- a/myMuseum/src/main/resources/templates/artistiModifca.html
+++ b/myMuseum/src/main/resources/templates/artistiModifca.html
@@ -18,14 +18,13 @@
       <h4 th:text="#{header.artisti}">Lista artisti</h4>
       <ul>
         <li th:each="artista : ${artisti}">
-          <a href="artista.html" 
-             th:href="@{'/artisti' + '/' + ${artista.id}}" 
+          <a href="artistaModifica.html" 
+             th:href="@{'/admin/modificaArtista' + '/' + ${artista.id}}" 
              th:text="|${artista.nome} ${artista.cognome}|">Michelangelo Buonarroti</a>
-          <span th:text="${#lists.size(artista.opere)}">Numero opere</span>
+         
         </li>
       </ul>
     </div>   
-<!--"${#​lists.size(u.engines)}-->
     </section>
 
 
