--- a/myMuseum/src/main/resources/templates/artistiCancella.html
+++ b/myMuseum/src/main/resources/templates/artistiCancella.html
@@ -8,8 +8,8 @@
       <a href="/home" th:text="#{header.home}">Home</a>
       <a href="/collezioni" th:text="#{header.collezioni}">Collezioni</a>
       <a href="/opere" th:text="#{header.opere}">Opere</a>
-      <a class="active" href="/artisti" th:text="#{header.artisti}">Artisti</a>
-      <a href="/admin/home" th:text="#{header.areaAdmin}">Area admin</a>
+      <a href="/artisti" th:text="#{header.artisti}">Artisti</a>
+      <a class="active" href="/admin/home" th:text="#{header.areaAdmin}">Area admin</a>
     </div>
 	  <header th:replace="fragments/base.html :: intestazione"></header>
     
