--- a/myMuseum/src/main/resources/templates/fragments/base.html
+++ b/myMuseum/src/main/resources/templates/fragments/base.html
@@ -1,6 +1,7 @@
 <!DOCTYPE HTML>
 <html xmlns:th="http://www.thymeleaf.org">
 <head th:fragment="headerfiles">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<meta charset="UTF-8" />
 	<link th:href="@{/css/myStyle.css}" rel="stylesheet">
 	<title >MyMuseum</title> 
